complete shopping iteration

--- a/StoreMe/Base.lproj/Main.storyboard
+++ b/StoreMe/Base.lproj/Main.storyboard
@@ -686,7 +686,7 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="emG-kJ-eBS"/>
-        <segue reference="661-k8-XJq"/>
+        <segue reference="waa-nn-W7K"/>
         <segue reference="TzB-eS-Ey0"/>
     </inferredMetricsTieBreakers>
 </document>
